--- a/about me.html
+++ b/about me.html
@@ -47,20 +47,41 @@
       </div>
     </div>
   </nav>
-  <h1 class="name"> Ann Chealzee Nerida</h1>
+  <h1 class="name">  Why you should hire me? </h1>
   <div class="profile-pic text-center">
     <img src="IMAGES and VIDS/zee.jpg" class="rounded-circle" alt="..." width="200px" height="200px">
   </div>
   <h4>
-    My name is Ann Chealzee M. Nerida, and I would describe my branding as having a lively and playful vibe that permeates everything I do. I want to excite and cheer up everyone I come into contact with, especially when working with various clients, starting with my logo's friendly appearance. <br> <br>
+    My name is Ann Chealzee M. Nerida, I am currently taking Bachelor of Arts in Multimedia Arts in Lyceum of the Philippines University - Manila, and was given a Bronze and Silver Dean's List Award. I also graduated with honors during Senior High School in the same university, and took up the Humanities and Social Sciences Strand. <br> <br>
+    
+    I would describe my branding as having a lively and playful vibe that permeates everything I do. I want to excite and cheer up everyone I come into contact with, especially when working with various clients, starting with my logo's friendly appearance. <br> <br>
 
 In spite of my playful branding, I manage and maintain my branding by being serious about learning and listening. I also firmly think that brilliant ideas may originate from everywhere, so I'm constantly open to soaking up fresh concepts, advice, and ideas from my partners and clients. I always appreciate the chance to bring many viewpoints into the creative process, whether it be through meetings, direct criticism, or cooperative initiatives. <br> <br>
 
 As we think of a cloud as being like a sponge, I am prepared to take in creativity and inspiration from wherever, and show it through my works.
+
+<br> <br>
+
+I am experienced in producing publication materials, conceptualization for content creating, and problem-solving skills. <br> <br>
+
+I was an associate for multimedia in LPU LIKHA from 2019 - 2020, <br> 
+A creatives committee in United Leaders Associate of the Philippines from 2020 - 2021, <br>
+And also a creatives and multimedia committee in LPU Multimedia Arts Society from 2020 - 2021. <br> <br>
+
+I was also the Vice President of LPU Multimedia Arts Society from 2021 - 2023, 
+and had my internship in Madcafe Inc. in 2024. <br> <br>
+
+I am also skilled in Adobe Photoshop, Adobe Illustrator, Adobe Premiere Pro, and interested in Graphic Designing, Illustrations, and Photo and Video Editing. <br><br>
+
   </h4>
   <center>
+
+    <a class="btn btn-primary" href="works.html"
+        role="button">Click Here to See My Works</a>
+
     <br>
     <br>
+
     <div class="row">
       <div class="col-sm-4">
         <img src="IMAGES and VIDS/1.jpg" alt="" class="pic1">
@@ -72,18 +93,15 @@ As we think of a cloud as being like a sponge, I am prepared to take in creativi
         <img src="IMAGES and VIDS/3.jpeg" alt="" class="pic3">
       </div>
     </div>
-    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample"
-      aria-expanded="false" aria-controls="collapseWidthExample">
-      More About Zee
-    </button>
-    <div class="collapse collapse-horizontal" id="collapseWidthExample">
-      <div class="card card-body" style="width: 1000px;">
-        Her forte in the art industry is graphic desiging, photo and video editing, digital arts, and watercolor
-        painting
+
+    
+
       </div>
     </div>
   </center>
   <hr>
+
+ 
   <h1 class="zee-life"> Zee's Life in Pictures </h1>
   <center>
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
